examples/test/testpolicy19000.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19000
  namespace: namespace244
spec:
  podSelector:
    matchLabels:
      key11: value10
      key15: value1
      key1: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value12
      podSelector:
        matchLabels:
          key7: value10
